3.10.1/_sources/gallery/statistics/time_series_histogram.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/statistics/time_series_histogram.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_statistics_time_series_histogram.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_statistics_time_series_histogram.py:


=====================
Time Series Histogram
=====================

This example demonstrates how to efficiently visualize large numbers of time
series in a way that could potentially reveal hidden substructure and patterns
that are not immediately obvious, and display them in a visually appealing way.

In this example, we generate multiple sinusoidal "signal" series that are
buried under a larger number of random walk "noise/background" series. For an
unbiased Gaussian random walk with standard deviation of σ, the RMS deviation
from the origin after n steps is σ*sqrt(n). So in order to keep the sinusoids
visible on the same scale as the random walks, we scale the amplitude by the
random walk RMS. In addition, we also introduce a small random offset ``phi``
to shift the sines left/right, and some additive random noise to shift
individual data points up/down to make the signal a bit more "realistic" (you
wouldn't expect a perfect sine wave to appear in your data).

The first plot shows the typical way of visualizing multiple time series by
overlaying them on top of each other with ``plt.plot`` and a small value of
``alpha``. The second and third plots show how to reinterpret the data as a 2d
histogram, with optional interpolation between data points, by using
``np.histogram2d`` and ``plt.pcolormesh``.

.. GENERATED FROM PYTHON SOURCE LINES 26-95

.. code-block:: Python


    import time

    import matplotlib.pyplot as plt
    import numpy as np

    fig, axes = plt.subplots(nrows=3, figsize=(6, 8), layout='constrained')

    # Fix random state for reproducibility
    np.random.seed(19680801)
    # Make some data; a 1D random walk + small fraction of sine waves
    num_series = 1000
    num_points = 100
    SNR = 0.10  # Signal to Noise Ratio
    x = np.linspace(0, 4 * np.pi, num_points)
    # Generate unbiased Gaussian random walks
    Y = np.cumsum(np.random.randn(num_series, num_points), axis=-1)
    # Generate sinusoidal signals
    num_signal = round(SNR * num_series)
    phi = (np.pi / 8) * np.random.randn(num_signal, 1)  # small random offset
    Y[-num_signal:] = (
        np.sqrt(np.arange(num_points))  # random walk RMS scaling factor
        * (np.sin(x - phi)
           + 0.05 * np.random.randn(num_signal, num_points))  # small random noise
    )


    # Plot series using `plot` and a small value of `alpha`. With this view it is
    # very difficult to observe the sinusoidal behavior because of how many
    # overlapping series there are. It also takes a bit of time to run because so
    # many individual artists need to be generated.
    tic = time.time()
    axes[0].plot(x, Y.T, color="C0", alpha=0.1)
    toc = time.time()
    axes[0].set_title("Line plot with alpha")
    print(f"{toc-tic:.3f} sec. elapsed")


    # Now we will convert the multiple time series into a histogram. Not only will
    # the hidden signal be more visible, but it is also a much quicker procedure.
    tic = time.time()
    # Linearly interpolate between the points in each time series
    num_fine = 800
    x_fine = np.linspace(x.min(), x.max(), num_fine)
    y_fine = np.concatenate([np.interp(x_fine, x, y_row) for y_row in Y])
    x_fine = np.broadcast_to(x_fine, (num_series, num_fine)).ravel()


    # Plot (x, y) points in 2d histogram with log colorscale
    # It is pretty evident that there is some kind of structure under the noise
    # You can tune vmax to make signal more visible
    cmap = plt.colormaps["plasma"]
    cmap = cmap.with_extremes(bad=cmap(0))
    h, xedges, yedges = np.histogram2d(x_fine, y_fine, bins=[400, 100])
    pcm = axes[1].pcolormesh(xedges, yedges, h.T, cmap=cmap,
                             norm="log", vmax=1.5e2, rasterized=True)
    fig.colorbar(pcm, ax=axes[1], label="# points", pad=0)
    axes[1].set_title("2d histogram and log color scale")

    # Same data but on linear color scale
    pcm = axes[2].pcolormesh(xedges, yedges, h.T, cmap=cmap,
                             vmax=1.5e2, rasterized=True)
    fig.colorbar(pcm, ax=axes[2], label="# points", pad=0)
    axes[2].set_title("2d histogram and linear color scale")

    toc = time.time()
    print(f"{toc-tic:.3f} sec. elapsed")
    plt.show()




.. image-sg:: /gallery/statistics/images/sphx_glr_time_series_histogram_001.png
   :alt: Line plot with alpha, 2d histogram and log color scale, 2d histogram and linear color scale
   :srcset: /gallery/statistics/images/sphx_glr_time_series_histogram_001.png, /gallery/statistics/images/sphx_glr_time_series_histogram_001_2_00x.png 2.00x
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    0.320 sec. elapsed
    0.102 sec. elapsed




.. GENERATED FROM PYTHON SOURCE LINES 96-111

.. tags::

   plot-type: histogram2d
   plot-type: pcolormesh
   purpose: storytelling
   styling: color
   component: colormap

.. admonition:: References

   The use of the following functions, methods, classes and modules is shown
   in this example:

   - `matplotlib.axes.Axes.pcolormesh` / `matplotlib.pyplot.pcolormesh`
   - `matplotlib.figure.Figure.colorbar`


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 3.056 seconds)


.. _sphx_glr_download_gallery_statistics_time_series_histogram.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: time_series_histogram.ipynb <time_series_histogram.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: time_series_histogram.py <time_series_histogram.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: time_series_histogram.zip <time_series_histogram.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
